<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.addTask.AddTaskFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_background">

        <ImageView
            android:id="@+id/btn_nav_home_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sixteen_dp"
            android:layout_marginEnd="@dimen/sixteen_dp"
            android:layoutDirection="rtl"
            app:layout_constraintBottom_toBottomOf="@+id/fragment_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_menu" />

        <TextView
            android:id="@+id/fragment_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sixteen_dp"
            android:fontFamily="@font/baloo2_regular"
            android:text="@string/new_task"
            android:textSize="@dimen/twenty_four_sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_title">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_icons_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/twenty_four_dp"
                    android:layout_marginTop="@dimen/sixteen_dp"
                    android:text="Icons"
                    android:textColor="@color/add_task_title_color"
                    android:textSize="@dimen/sixteen_sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/icons_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/sixteen_dp"
                    android:clipToPadding="false"
                    android:orientation="horizontal"
                    android:paddingStart="@dimen/twenty_four_dp"
                    android:paddingEnd="@dimen/twenty_four_dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_icons_title"
                    tools:listitem="@layout/icon_item" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintTop_toBottomOf="@id/icons_recycler_view">

                    <TextView
                        android:id="@+id/tv_name_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/twenty_four_dp"
                        android:layout_marginTop="@dimen/sixteen_dp"
                        android:text="@string/name"
                        android:textColor="@color/add_task_title_color"
                        android:textSize="@dimen/sixteen_sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/ip_name_layout"
                        style="@style/TextInputLayoutOrangeColor"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/twenty_four_dp"
                        android:layout_marginTop="@dimen/sixteen_dp"
                        android:layout_marginEnd="@dimen/twenty_four_dp"
                        android:hint="@string/task_name"
                        android:textColorHint="@color/hintColor"
                        app:boxCornerRadiusBottomEnd="@dimen/twelve_dp"
                        app:boxCornerRadiusBottomStart="@dimen/twelve_dp"
                        app:boxCornerRadiusTopEnd="@dimen/twelve_dp"
                        app:boxCornerRadiusTopStart="@dimen/twelve_dp"
                        app:hintTextColor="@color/hintColor"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_name_title">

                        <!--this is the actual edit text which takes the input-->
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/ed_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:lines="1"
                            android:maxLines="1"
                            android:textColor="@color/black_overlay" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/tv_description_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/twenty_four_dp"
                        android:layout_marginTop="@dimen/sixteen_dp"
                        android:text="@string/description"
                        android:textColor="@color/add_task_title_color"
                        android:textSize="@dimen/sixteen_sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/ip_name_layout" />

                    <EditText
                        android:id="@+id/ed_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/twenty_four_dp"
                        android:layout_marginTop="@dimen/sixteen_dp"
                        android:layout_marginEnd="@dimen/twenty_four_dp"
                        android:background="@drawable/description_background"
                        android:gravity="center_horizontal"
                        android:lineSpacingExtra="@dimen/four_dp"
                        android:padding="@dimen/eight_dp"
                        android:textColor="@color/black_overlay"
                        app:layout_constraintTop_toBottomOf="@+id/tv_description_title" />

                    <TextView
                        android:id="@+id/tv_date_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/twenty_four_dp"
                        android:layout_marginTop="@dimen/sixteen_dp"
                        android:text="@string/date"
                        android:textColor="@color/add_task_title_color"
                        android:textSize="@dimen/sixteen_sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/ed_description" />

                    <TextView
                        android:id="@+id/tv_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/twenty_four_dp"
                        android:layout_marginTop="@dimen/sixteen_dp"
                        android:text=""
                        android:textColor="@color/black_overlay"
                        android:textSize="@dimen/sixteen_sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_date_title" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/btn_open_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/eight_dp"
                        android:padding="@dimen/sixteen_dp"
                        app:layout_constraintBottom_toBottomOf="@+id/tv_date"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/tv_date"
                        app:srcCompat="@drawable/ic_open_date_time" />

                    <View
                        android:id="@+id/view"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/two_dp"
                        android:layout_marginStart="@dimen/twenty_four_dp"
                        android:layout_marginTop="@dimen/eight_dp"
                        android:layout_marginEnd="@dimen/twenty_four_dp"
                        android:background="@color/shopping_color"
                        app:layout_constraintTop_toBottomOf="@id/btn_open_date"
                        tools:layout_editor_absoluteX="24dp" />

                    <TextView
                        android:id="@+id/tv_time_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/twenty_four_dp"
                        android:layout_marginTop="@dimen/sixteen_dp"
                        android:text="@string/time"
                        android:textColor="@color/add_task_title_color"
                        android:textSize="@dimen/sixteen_sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/view" />

                    <TextView
                        android:id="@+id/tv_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/twenty_four_dp"
                        android:layout_marginTop="@dimen/sixteen_dp"
                        android:text=""
                        android:textColor="@color/black_overlay"
                        android:textSize="@dimen/sixteen_sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_time_title" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/btn_open_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/eight_dp"
                        android:padding="@dimen/sixteen_dp"
                        app:layout_constraintBottom_toBottomOf="@+id/tv_time"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/tv_time"
                        app:srcCompat="@drawable/ic_open_date_time" />

                    <View
                        android:id="@+id/view2"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/two_dp"
                        android:layout_marginStart="@dimen/twenty_four_dp"
                        android:layout_marginEnd="@dimen/twenty_four_dp"
                        android:layout_marginTop="@dimen/eight_dp"
                        android:background="@color/shopping_color"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/btn_open_time"
                        tools:layout_editor_absoluteX="24dp" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_add_task"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/twenty_four_dp"
                        android:layout_marginTop="120dp"
                        android:layout_marginEnd="@dimen/sixteen_dp"
                        android:layout_marginBottom="@dimen/sixteen_dp"
                        android:background="@drawable/gradient_blue_button"
                        android:paddingStart="@dimen/twenty_four_dp"
                        android:paddingEnd="@dimen/twenty_four_dp"
                        android:text="@string/add"
                        android:textColor="@color/white"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/view2" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>